backend/depolyment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-backend
  namespace: chat-backend
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-backend
  template:
    metadata:
      labels:
        app: chat-backend
    spec:
      containers:
        - name: chat-backend
          image: ghcr.io/anish13kumar/chat-application/chatapp-backend:latest
          ports:
            - containerPort: 3000
