backend/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: chat-backend-ingress
  namespace: chat-backend
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`api.succeedex.in`)
      kind: Rule
      services:
        - name: chat-backend-service
          port: 3000
      middlewares:
        - name: websocket-headers
        - name: cors-headers
  tls:
    secretName: chat-frontend-ws-cert-secret
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: websocket-headers
  namespace: chat-backend
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
      Connection: "Upgrade"
      Upgrade: "websocket"
    customResponseHeaders:
      Connection: "Upgrade"
      Upgrade: "websocket"
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: cors-headers
  namespace: chat-backend
spec:
  headers:
    accessControlAllowMethods:
      - "GET"
      - "POST"
      - "OPTIONS"
      - "PUT"
      - "DELETE"
    accessControlAllowOriginList:
      - "*"
    accessControlAllowHeaders:
      - "Origin"
      - "Content-Type"
      - "Accept"
      - "Authorization"
    accessControlAllowCredentials: true
    accessControlMaxAge: 100
